apps/langfuse/langfuse-s3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: langfuse-s3
  namespace: langfuse
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      name: api
    - port: 9001
      targetPort: 9001
      name: console
  selector:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: langfuse
